Finishing Building Management

--- a/src/main/webapp/pages/buildingManagement.xhtml
+++ b/src/main/webapp/pages/buildingManagement.xhtml
@@ -23,7 +23,8 @@
 					<tr>
 						<td width="100%">
 							<div align="left" class="mainDivClass">
-								<p:commandLink value="Add New Building" styleClass="commonLink" onclick="PF('newBuildingPopup').show()"></p:commandLink>
+								<p:commandLink value="Create New Building" styleClass="commonLink" onclick="PF('newBuildingPopup').show()"></p:commandLink>
+								<p:commandLink value="Add Existing Building" styleClass="commonLink" onclick="PF('newBuildingPopup').show()"></p:commandLink>
 								<br/>
 								<br/>
 								<p:dataTable id="paginatorSelector"
